# lidar_camera_uav_code_remote

./: multipic_run_demoVelodyne.m
bin point cloud/: see_pl.py
bin point cloud/velodyne_points/data/: readme
interpolation/: CMakeLists.txt
interpolation/src/: interpolation.cpp  interpolation2.cpp
label/: 001.txt
label/Images/: 000000.txt  000001.txt  000002.txt  000003.txt  000004.txt  000005.txt  000006.txt  000007.txt  000008.txt  000009.txt  000010.txt  000011.txt  000012.txt  000013.txt  000014.txt  000015.txt  000016.txt  000017.txt  000018.txt  000019.txt  000020.txt  000021.txt  000022.txt  000023.txt  000024.txt  000025.txt  000026.txt  000027.txt  000028.txt  000029.txt  000030.txt  000031.txt  000032.txt  000033.txt  000034.txt  000035.txt  000036.txt  000037.txt  000038.txt  000039.txt  (+80 more)
label/pc/1/: 001.txt  002.txt  003.txt  004.txt  005.txt  007.txt  008.txt  009.txt  010.txt  012.txt  013.txt  014.txt  015.txt  017.txt  018.txt  019.txt  020.txt  021.txt  022.txt  (+77 more)
upsample/: .CMakeLists.txt.swo  .CMakeLists.txt.swp  .imageBasics.cpp.swp  CMakeLists.txt  imageBasics.cpp
upsample/bulid/: 0000000000.pngvelo_img_data  0000000001.pngvelo_data  0000000002.pngvelo_img_data  CMakeCache.txt  Makefile  cmake_install.cmake  imageBasics  readme
upsample/src/: .imageBasics.cpp.swp  .imageBasics.h.swp  .upsample.cpp.swp  .upsample.h.swp  815imageBasics.cpp  815upsample.cpp  816imageBasics.cpp  816upsample.cpp  817imageBasics.cpp  823imageBasics.cpp  imageBasics.cpp  imageBasics.h  test.cpp  testpic.txt  upsample.cpp  upsample.h  wrong_imageBasics.cpp
(+63 files in other folders)
